--- a/frontend/src/components/Styles.css
+++ b/frontend/src/components/Styles.css
@@ -12,8 +12,8 @@ header {
 }
 
 main {
-  background-color: #fff2f2;
-  height: min-content;
+  background-color: #FFF2F2;
+  height: max-content;
 }
 
 footer {
@@ -31,6 +31,8 @@ footer {
   border-radius: 1rem;
   text-decoration: none;
   transition-duration: 0.4s;
+  font-size: 14px;
+  font-family: "Metro-B";
 }
 
 .button.navy {
@@ -44,6 +46,13 @@ footer {
   color: #fcc5c0;
   border: 2px solid #db4d4b;
 }
+
+.button.red.light {
+  background-color: #db4d4b;
+  color: #FFF2F2;
+  border: 2px solid #db4d4b;
+}
+
 
 .button.navy:hover {
   background-color: transparent;
@@ -82,14 +91,51 @@ footer {
   color: #fcc5c0;
 }
 
-.button-lightpink-liner {
+.button-redit-liner {
   color: #db4d4b;
 }
 
-.button-lightpink-liner:hover {
+.button-redit-liner:hover {
   text-decoration-line: underline;
-  text-decoration-thickness: 1px;
-  text-decoration-color: #fcc5c0;
+  text-decoration-thickness: 2px;
+  text-decoration-color: #db4d4b;
+}
+
+.goback {
+  background-image: linear-gradient(
+    to right,
+    #db4d4b,
+    #db4d4b 50%,
+    #263159 50%
+  );
+  background-size: 200% 100%;
+  background-position: -100%;
+  display: inline-block;
+  padding: 5px 0;
+  position: relative;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  transition: all 0.3s ease-in-out;
+}
+
+.goback:before {
+  content: '';
+  background: #db4d4b;
+  display: block;
+  position: absolute;
+  bottom: -3px;
+  left: 0;
+  width: 0;
+  height: 3px;
+  transition: all 0.3s ease-in-out;
+}
+
+.goback:hover {
+ background-position: 0;
+}
+
+.goback:hover::before {
+  width:100%;
 }
 
 /*/////////////////////////////////////////////////////////////////*/
@@ -98,6 +144,20 @@ footer {
 
 .text-48px {
   font-size: 3rem;
+  /* 48px */
+  line-height: 1;
+  font-family: "Metro-B";
+}
+
+.text-45px {
+  font-size: 2.8rem;
+  /* 48px */
+  line-height: 1;
+  font-family: "Metro-B";
+}
+
+.text-40px {
+  font-size: 2.5rem;
   /* 48px */
   line-height: 1;
   font-family: "Metro-B";
@@ -203,6 +263,11 @@ footer {
 
 /*////////////////////////// images size //////////////////////////*/
 
+.images-48px {
+  width: 48px;
+  height: 48px;
+}
+
 .images-30px {
     width: 30px;
     height: 30px;
@@ -228,6 +293,11 @@ footer {
   height: 16px;
 }
 
+.images-14px {
+  width: 14px;
+  height: 14px;
+}
+
 
 /*/////////////////////////////////////////////////////////////////*/
 
@@ -250,7 +320,6 @@ footer {
 }
 
 .container {
-  display: flex;
   align-items: center;
   text-align: center;
 }
@@ -289,6 +358,17 @@ footer {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+}
+
+.overflow {
+  /* background-color: #fed9ff; */
+  width: 90%;
+  max-height: 20rem;
+  overflow-x: hidden;
+  overflow-y: auto;
+  text-align: left;
+  justify-content: center;
+  padding: 20px;
 }
 
 .line {
@@ -371,16 +451,15 @@ footer {
 .dataTables_wrapper {
   width: 100%;
   margin: 0 auto;
-  font-size: 14px;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color: #333;
+  font-size: 16px;
+  font-family: 'Metro-B';
+  color: #263159;
 }
 
 .dataTables_length select {
     width: 120px !important;
   }
   
-
 .dataTables_filter {
   margin-left: 10px;
   margin-bottom: 5px;
@@ -396,21 +475,22 @@ table.dataTable {
 
 table.dataTable thead th {
   padding: 10px 15px;
-  background-color: #eee;
-  border-bottom: 1px solid #ddd;
+  background-color: #FCC5C0;
   text-align: left;
 }
 
 table.dataTable tbody td {
   padding: 10px 15px;
-  border-bottom: 1px solid #ddd;
+  border-bottom: 1px solid #000;
   text-align: left;
 }
 
 table.dataTable tbody tr:nth-child(odd) {
-  background-color: #f9f9f9;
+  background-color: #FFF2F2;
 }
 
 table.dataTable tbody tr:hover {
-  background-color: #f5f5f5;
+  background-color: #FFF2F2;
 }
+
+/* slide show */
